# americasnlp-2026-shared-task

./: .gitignore  .gitmodules  DESIGN.md  PROGRESS.md  README.md  pyproject.toml  pyrightconfig.json  wrangler.toml
docs/: auto_finetuning_spec.md  bootstrap_language.md
functions/: _middleware.js
results/: evaluation_results.csv  spot_check_concise_prompt.jsonl
results/baseline/: bribri_dev_gpt-4o-mini_shots3.csv  bribri_dev_gpt-4o-mini_shots3.jsonl  guarani_dev_gpt-4o-mini_shots3.csv  guarani_dev_gpt-4o-mini_shots3.jsonl  maya_dev_gpt-4o-mini_shots3.csv  maya_dev_gpt-4o-mini_shots3.jsonl  nahuatl_dev_gpt-4o-mini_shots3.csv  nahuatl_dev_gpt-4o-mini_shots3.jsonl  wixarika_dev_gpt-4o-mini_shots3.csv  wixarika_dev_gpt-4o-mini_shots3.jsonl
results/dev/: bribri_dev_direct-shots3_claude-sonnet-4-5.csv  bribri_dev_direct-shots3_claude-sonnet-4-5.jsonl  bribri_dev_one-step-spot_gpt-5.csv  bribri_dev_one-step-spot_gpt-5.jsonl  bribri_dev_one-step-v2_gpt-5.csv  bribri_dev_one-step-v2_gpt-5.jsonl  bribri_dev_one-step-v3-minimal_gpt-5.csv  bribri_dev_one-step-v3-minimal_gpt-5.jsonl  bribri_dev_one-step_gpt-4o-mini.csv  bribri_dev_one-step_gpt-4o-mini.jsonl  bribri_dev_one-step_gpt-5.csv  bribri_dev_one-step_gpt-5.jsonl  bribri_dev_pipeline_claude-sonnet-4-5.csv  bribri_dev_pipeline_claude-sonnet-4-5.jsonl  bribri_dev_pipeline_gpt-4o-mini.csv  bribri_dev_pipeline_gpt-4o-mini.jsonl  bribri_dev_pipeline_gpt-4o.csv  bribri_dev_pipeline_gpt-4o.jsonl  bribri_dev_pipeline_gpt-5.csv  bribri_dev_pipeline_gpt-5.jsonl  bribri_dev_pipeline_qwen2.5vl:32b.csv  bribri_dev_pipeline_qwen2.5vl:32b.jsonl  bribri_dev_pipeline_schema-v2_claude_vlm__gpt-4o-mini_translator.csv  bribri_dev_pipeline_schema-v2_claude_vlm__gpt-4o-mini_translator.jsonl  bribri_dev_pipeline_schema-v3_claude_vlm__gpt-4o-mini_translator.csv  bribri_dev_pipeline_schema-v3_claude_vlm__gpt-4o-mini_translator.jsonl  bribri_dev_pipeline_schema-v3_claude_vlm__gpt-4o_translator.jsonl  bribri_dev_pipeline_schema-v3_claude_vlm__gpt-5_translator.jsonl  bribri_dev_pipeline_schema-v3_claude_vlm__qwen2.5vl-32b_translator.jsonl  bribri_dev_pipeline_strict-schema_claude_vlm__gpt-4o-mini_translator.csv  bribri_dev_pipeline_strict-schema_claude_vlm__gpt-4o-mini_translator.jsonl  bribri_dev_pipeline_strict-schema_claude_vlm__gpt-4o_translator.jsonl  bribri_dev_pipeline_strict-schema_qwen-vl__gpt-4o-mini_translator.csv  bribri_dev_pipeline_strict-schema_qwen-vl__gpt-4o-mini_translator.jsonl  bribri_dev_val_direct-shots3_claude-sonnet-4-5.csv  bribri_dev_val_direct-shots3_claude-sonnet-4-5.jsonl  guarani_dev_direct-shots3_claude-sonnet-4-5.csv  guarani_dev_direct-shots3_claude-sonnet-4-5.jsonl  guarani_dev_one-step-spot_gpt-5.csv  guarani_dev_one-step-spot_gpt-5.jsonl  (+151 more)
results/submissions/: bribri_one-step_gpt-5.jsonl  bribri_one-step_gpt-5.rich.jsonl  guarani_one-step_gpt-5.jsonl  guarani_one-step_gpt-5.rich.jsonl  maya_one-step_gpt-5.jsonl  maya_one-step_gpt-5.rich.jsonl  nahuatl_one-step_gpt-5.jsonl  nahuatl_one-step_gpt-5.rich.jsonl  wixarika_one-step_gpt-5.jsonl  wixarika_one-step_gpt-5.rich.jsonl
scripts/: backfill_back_translations.py  baseline.py  evaluate.py  fill_back_translation.py  languages.py  make_all_submissions.sh  make_submission.py  probe_token_costs.py  qualitative_analysis.py  regen_bt_from_structured.py  retranslate.py  run_all.sh  spot_check_concise_prompt.py  test_caption.py  validate_submission.py
site/: build_data.py
site/public/: app.js  index.html  style.css
src/americasnlp/: __init__.py  __main__.py  _anthropic.py  _ollama.py  _openai.py  cli.py  data.py  evaluate.py  languages.py  submit.py
src/americasnlp/captioners/: __init__.py  direct.py  one_step.py  pipeline.py
src/americasnlp/generator/: __init__.py  agent.py  extract.py  scaffold.py  split.py  validate.py
yaduha-bzd/: pyproject.toml
yaduha-bzd/yaduha_bzd/: __init__.py  vocab.py
yaduha-grn/: pyproject.toml
yaduha-grn/yaduha_grn/: __init__.py  vocab.py
yaduha-hch/: README.md  pyproject.toml
yaduha-hch/yaduha_hch/: __init__.py  prompts.py  vocab.py
yaduha-nlv/: pyproject.toml
yaduha-nlv/yaduha_nlv/: __init__.py  vocab.py
yaduha-yua/: pyproject.toml
yaduha-yua/yaduha_yua/: __init__.py  vocab.py
