[project]
name = "americasnlp-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yaduha-ovp",
    "yaduha-hch",
    "yaduha[all]",
    "sacrebleu>=2.0",
    "matplotlib>=3.0",
]

[tool.uv.workspace]
members = [
    "yaduha",
    "yaduha-ovp",
    "yaduha-hch",
]

[tool.uv.sources]
yaduha = { workspace = true, editable = true }
yaduha-ovp = { workspace = true, editable = true }
yaduha-hch = { workspace = true, editable = true }
