[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yaduha-bzd"
version = "0.1.0"
description = "Bribri (bzd) language stub for the Yaduha framework"
requires-python = ">=3.10"
dependencies = ["yaduha>=0.3"]

[project.entry-points."yaduha.languages"]
bzd = "yaduha_bzd:language"
