[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yaduha-yua"
version = "0.1.0"
description = "Yucatec Maya (yua) language stub for the Yaduha framework"
requires-python = ">=3.10"
dependencies = ["yaduha>=0.3"]

[project.entry-points."yaduha.languages"]
yua = "yaduha_yua:language"
